--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -6,7 +6,7 @@ the value of the
 CP violating phase, $\delta_{CP}$, and
 to determine the mass ordering of the three neutrino mass eignestates. 
 This will be accomplished through measurement of 
-appearance rate of electron neutrinos and electron anti-neutrinos 
+the appearance rate of electron neutrinos and electron anti-neutrinos 
 as well as the corresponding disappearance rate of muon neutrinos 
 and muon anti-neutrinos over the 1300~km baseline of the experiment. 
 Other important physics goals include sensitive searches for proton decay and detection of supernova neutrinos.
@@ -51,7 +51,7 @@ mass hierarchy (left) and $\delta_{CP}$ (right) sensitivities.
 The exposure to achieve this level of sensitivity corresponds to 
 %The nominal sensitivity assumes a
 % 230-400 kt-MW-years for mass hierarchy and  850-1320 kt-MW-years for CPV depending on the 
-115 kt-MW-years in each of neutrino and antineutrino modes.
+115 kt-MW-years in each of neutrino and anti-neutrino modes.
 %The sensitivities will also depend on the
 %details of the LBNF neutrino beam design.
 %exposure with equal neutrino and antineutrino running. 
@@ -103,8 +103,8 @@ LAr TPC technology was first proposed for use in neutrino experiments by C. Rubb
 %Title 	The liquid-argon time projection chamber : a new concept for neutrino detectors
 %operating in the CNGS beamline  (with mean beam energy $\sim$17 GeV)~\cite{ICARUSmain}. 
 The ICARUS T600 detector~\cite{icarus_mainref} pioneered the first large-scale detector when it operated in the CNGS 
-neutrino beam at mean energy $\sim$17 GeV. ArgoNeuT~\cite{argoneut1}\cite{argoneut2} recently studied 
-neutrino interactions in the NuMI beam down to sub-GeV energies with a small-scale (175~l fiducial volume) detector. 
+neutrino beam at mean energy of $\sim$17 GeV. ArgoNeuT~\cite{argoneut1}\cite{argoneut2} recently studied 
+neutrino interactions in the NuMI beam down to sub-GeV energies with a small-scale (175~L fiducial volume) detector. 
 While these samples are proving useful, they do not allow full isolation of
 the low energy neutrino interaction processes
 and final states from reconstruction and detector effects. 
@@ -147,8 +147,7 @@ longitudinal and transverse dimensions to contain showering particles up to the 
 Fig.~\ref{fig:containment} shows the simulated longitudinal and transverse 
 energy containment for proton showers up to 10~GeV in energy.
 For 10 GeV showers, more than 95\% of the energy is contained in a detector of longitudinal size of 6~m and 
-radius of 2.5~m. Showers from pions, kaons, and electrons have also been studied and similar or better containment
-is achieved in those cases and for the above detector dimensions.
+radius of 2.5~m. Showers from pions, kaons, and electrons have also been studied and similar or better containment is achieved in those cases, given the above detector dimensions.
 \begin{figure}[htp]
   \centering
   \begin{tabular}{ccc}
@@ -223,7 +222,7 @@ $\mu^+$ &   (0.2), 0.5, 1, 2   &  10k & $E_\mu$, Michel el.,charge sign  \\ \hli
 $\mu^-$ or $\mu^+$ &   3, 5, 7  &  5k & $E_\mu$ MCS \\ \hline
 %$\mu^-$ or $\mu^+$  &  1 \& 2  &  5K  & vary angle ($\times$5), reco \\ \hline
 %proton &  1 \& 2 &  10K & vary angle ($\times$5), reco \\ \hline
-antiproton &  low-energy tune  &  (100) & antiproton stars \\ \hline
+anti-proton &  low-energy tune  &  (100) & anti-proton stars \\ \hline
 K$^+$  & 1 & (13k)   &   response, PID, PDK  \\ \hline
 K$^+$  & 0.5, 0.7 & (5k)   &   response, PID, PDK  \\ \hline \hline
 $\mu$, e, proton  & 1 (vary angle $\times$5) & 10k  & reconstruction  \\ \hline
@@ -241,17 +240,17 @@ primarily to study hadronic shower reconstruction and calibration as described i
  as well as particle identification (PID) algorithms discussed in Sec.~\ref{detbeam_pid}. A sample of 600k
  2~GeV $\pi^+$ will be used to study  secondary $\pi^o$ over a large angular range 
 to tune and calibrate electron/photon separation algorithms (see Sec.~\ref{sec_egam}).
-A large sample (10$^{6}$) 1 GeV protons represents a sample of low energy stopping protons over a 
+A large sample (10$^{6}$) of 1 GeV protons represents a sample of low energy stopping protons over a 
 wide angular range needed to study angular
 dependent effects on collected charge as described in Sec.~\ref{sec_angle}.
 Electrons will be used to benchmark and tune  electron/photon separation algorithms and to calibrate 
 electromagnetic showers as discussed in Sec. \ref{sec_egam}.
-Muon (and antimuon) samples are needed to study reconstruction and PID calibration as well as to obtain 
+Muon (and anti-muon) samples are needed to study reconstruction and PID calibration as well as to obtain 
 Michel electron events for calibration  
 algorithms for charge-sign determination (see Secs.\ref{sec_reco} and \ref{sec_other}).
 
 Charged-kaon samples will be useful to characterize kaon PID efficiency for proton decay sensitivity but
-are a somewhat lower priority need. The antiproton sample
+are a somewhat lower priority requirement. The anti-proton sample
 will be helpful for exotic physics sensitivity studies. Both of these lower priority requests are discussed
 in Sec.~\ref{sec_other}.
 
@@ -397,7 +396,7 @@ exclusive final state processes over the full relevant energy range and specific
 %Ionization charge deposited by charged-particles in the LAr TPC must be calibrated to
 %account for recombination effects. 
 
-A track angular dependent correction must be
+An angular dependent track correction must be
 %Track angle must be accounted for and a correction
 applied to deposited charge to accurately calibrate
 dE/dx that is used for track momentum and particle ID (see Sec.~\ref{detbeam_pid}). 
@@ -492,13 +491,13 @@ perform tests of PID algorithms and Bethe-Bloch calibration measurements.
 \subsubsection{Reconstruction effects}
 \label{sec_reco}
 
-Reconstruction algorithms use all three signal planes for 3D track and event reconstruction. The quality of reconstruction is affected by two main factors that can be quantified with test beam data:
+Reconstruction algorithms use all three wire planes for 3D track and event reconstruction. The quality of reconstruction is affected by two main factors that can be quantified with test beam data:
 \begin{itemize}
 \item The complexity of the event topology, which includes the number of objects overlapping in 2D projections and the number of possible object associations between 2D projections. The topology complexity depends on the energy of incident particle. Hadronic showers collected with the test beam can provide data sample to assess the reconstruction algorithm performance and test its dependence on the incident particle energy.
 \item Orientation of the reconstructed object w.r.t. the readout wires and electron drift direction:
 \begin{itemize}
-\item Tracks and cascades in the plane parallel or almost parallel to the signal planes have strongly limited variation of the hit drift time, required for the 3D reconstruction; various reconstruction algorithms can show different performance in real detector conditions for such inclined objects, especially in the presence of noise affecting hit time reconstruction.
-\item A 2D projection of objects aligned with the wires of one of the planes is strongly shortened, which limits the amount of information available to the reconstruction algorithm; the two other signal planes can be used for spatial reconstruction, however, the validation of the correctness of reconstruction, calculated from the 3D object projected to the third plane, is less efficient.
+\item Tracks and cascades in the plane parallel or almost parallel to the wire planes have strongly limited variation of the hit drift time, required for the 3D reconstruction; various reconstruction algorithms can show different performance in real detector conditions for such inclined objects, especially in the presence of noise affecting hit time reconstruction.
+\item A 2D projection of objects aligned with the wires of one of the planes is strongly shortened, which limits the amount of information available to the reconstruction algorithm; the two other wire planes can be used for spatial reconstruction.  However, the validation of the correctness of reconstruction, calculated from the 3D object projected to the third plane, is less efficient.
 The most important aspect of this issue is the use of all planes for the charge measurement. If the reconstructed object is aligned with collection wires then the calorimetric measurement has to be carried out with the signal from the induction planes. The additional shielding wire plane in the DUNE design will improve the quality of the bipolar induction plane signals.  The test beam 
 data will help with the calibration of these signals.
 \item Objects aligned with the drift field are projected onto a low
@@ -626,10 +625,10 @@ The DUNE experiment will be capable of addressing other physics beyond the long-
 \subsubsection{Supernova and Michel electrons}
 
 Neutrinos produced in supernova explosions since the first stars formed in the universe constitute the
-diffuse relic supernova neutrino background. The DUNE Far detector could have unique sensitivity to these
+diffuse relic supernova neutrino background. The DUNE Far Detector could have unique sensitivity to these
 few-to-30-MeV range $\nu_e$'s. 
 The test beam cannot offer a sample of  such low energy electrons, but Michel electrons  produced by 
-decaying stopped muons is ideal to calibrate electron response in the appropriate 10-50~MeV energy range. 
+decaying stopped muons are ideal to calibrate electron response in the appropriate 10-50~MeV energy range. 
 The requested sample of low energy muons will supply the 1400 Michel electrons required for a 1\% 
 calibration of electrons in this energy range. This sample can be compared to a similar Michel electron sample
 stemming from stopping cosmic muons.
@@ -649,7 +648,7 @@ It is not possible to determine the charge of the particle on an event by event 
 %However, the statistical analyst will be possible. We will fit the muon's half time which is different for muons and antimony due to different muon capture cross sections. 
 For the $\mu^-$ we expect about 99.9\% to be captured on argon whereas essentially all $\mu^+$ decay \cite{stopmu}.
 Charge-sign tagged $\nu_\mu$ samples may be useful to constrain exotic possibilities such as
-non-standard neutrino interactions which predict particle-antiparticle survival probability differences. 
+non-standard neutrino interactions which predict differences in the particle and anti-particle survival probabilities. 
 
 
 \subsubsection{Proton decay sensitivity and background samples}
@@ -657,7 +656,7 @@ non-standard neutrino interactions which predict particle-antiparticle survival 
 
 The DUNE experiment in the deep underground location will seek to detect several modes of proton decay.
 In particular, a first ever LAr detector of this scale underground will primarily improve sensitivity to 
-proton decays with final state kaons such as  $p \rightarrow K^+ \overline{\nu}$. 
+proton decays with final state kaons such as  ${p \rightarrow K^+ \overline{\nu}}$. 
 Sensitivity to this process is studied in \cite{bueno}. $K^+$ detection efficiency is estimated to be $>$97\% in the
 appropriate momentum range (500-800 MeV/c). The kaon samples requested in Table~\ref{tab:runsum} are needed to directly measure 
 $K^+$ PID and detection efficiency. 
@@ -689,11 +688,10 @@ is  misidentified as stopping kaon. A proton interaction which produces neutrals
 
 \subsubsection{Anti-proton annihilation }
 
-A sample of antiprotons would be useful to calibrate the $p$-$\overline{p}$ annihilation process. 
-This would provide input to exotic baryon number-violating process in which neutron-antineutron oscillation
-occurs and results in a
+A sample of anti-protons would be useful to calibrate the $p$-$\overline{p}$ annihilation process. 
+This would provide input to exotic an baryon number violating process in which oscillation between neutron and anti-neutron occurs and results in a
 % (reference) modeling of 
-subsequent  $n$-$\overline{n}$ annihilation. The modeling of $p\overline{p}$ annihilation could be
+subsequent  $n$-$\overline{n}$ annihilation. The modeling of $p-\overline{p}$ annihilation could be
 studied and tuned on a low-energy $\overline{p}$ beam sample and used to constrain the related modes 
 expected for  $n$-$\overline{n}$ annihilation. These events would be tagged in the 
 mixed-mode beam. Events in the sub-GeV range would be the most useful for this purpose.
