--- a/photondetector.tex
+++ b/photondetector.tex
@@ -2,8 +2,7 @@
 
 
 
-The photon detection system (PDS) of the DUNE far detector will utilize liquid argon scintillation light to trigger on non-beam events and to
-determine the prompt event time primarily for non-beam events but also for beam events. 
+The photon detection system (PDS) of the DUNE far detector will utilize liquid argon scintillation light.  The system will be used to trigger on non-beam events and to determine the prompt event time for both non-beam and beam events. 
 Timing information will be useful in determining the t$_0$ of cosmic rays, including those which 
 overlap with beam events and events from radiological decays. This timing information allows proper spatial event reconstruction, including 
 the reconstruction and rejection of background events.\\
@@ -15,7 +14,7 @@ provide improvements for energy reconstruction.
 
 Several prototypes of photon detection systems for single phase liquid argon detectors have been developed by the former LBNE photon detector group over the past few years. There are currently three prototypes under consideration for use in the first module of the DUNE far detector, a baseline design along with two alternate designs. A decision on the design to be deployed in the CERN test will be made in late 2015. 
 DUNE-PT provides the first full scale test of the photon detectors which will be fully integrated into a 
-full scale TPC anode plane assembly. 
+full scale APA. 
 
 The present reference design for the photon detection system is based on acrylic bars that are 200~cm long and 7.6~cm wide, which are coated with a layer of tetraphenyl-butadiene (TPB). The wavelength shifter converts incoming VUV (128 nm) scintillation photons
 %   with a conversion efficiency of ~50\% \cite{conversion-eff}
@@ -26,7 +25,7 @@ About 50\% of the converted photons will be emitted into the bar.
 A full 6 m long APA will be divided into 5 bays with 2 PD modules (paddles) instrumenting each bay. The paddles will be inserted into the frames after the TPC wires have been strung allowing  final assembly at the CERN test location. Two alternative designs are also under consideration. 
 
 
-One alternate design attempts to increase the geometrical acceptance of the photon detectors by using large acrylic TPB coated plates with imbedded WLS fibers for readout. In this design the number of required SiPMs and readout channels per unit detector area covered with photon detection panels would be significantly reduced to keep the overall cost for the photon detection system at or below the present design while increasing the geometrical acceptance at the same time. The prototype consists of a TPB-coated acrylic panel embedded with a S-shaped wavelength shifting (WLS) fiber. The fiber is read out by two SiPMs, coupled to either end of the fiber, and serves to transport the light over long distances with minimal attenuation. The double-ended fiber readout has the added benefit to provide some position dependence to the light generation along the panel by comparing relative signal sizes and arrival times in the two SiPMs. 
+One alternate design attempts to increase the geometrical acceptance of the photon detectors by using large acrylic TPB coated plates with imbedded WLS fibers for readout. In this design the number of required SiPMs and readout channels per detector area would be significantly reduced.  This will keep the overall cost for the photon detection system at or below the present design while increasing the geometrical acceptance. The prototype consists of a TPB-coated acrylic panel embedded with a S-shaped wavelength shifting (WLS) fiber. The fiber is read out by two SiPMs, coupled to either end of the fiber, and serves to transport the light over long distances with minimal attenuation. The double-ended fiber readout has the added benefit to provide some position dependence to the light generation along the panel by comparing relative signal sizes and arrival times in the two SiPMs. 
 
 
 
