--- a/cryo.tex
+++ b/cryo.tex
@@ -7,8 +7,8 @@
 
 DUNE-PT will use a membrane tank technology supported by an outer steel structure.
 
-The minimum internal size of the cryostat is determined from size of the TPC.  At the bottom of the 
-cryostat there needs to be a minimum of 0.36 m between the frame of the CPA and closest point on the stainless steel 
+The minimum internal size of the cryostat is determined by the size of the TPC.  At the bottom of the 
+cryostat there needs to be a minimum of 0.36 m between the frame of the CPA and the closest point on the stainless steel 
 membrane.  This is to prevent high voltage discharge between the CPA and the electrically grounded 
 membrane. It is foreseen that there would be some cryogenic piping and instrumentation under the TPC.  
 There is a height allowance of 0.165 m for this.  There will be access and egress space around the outside 
@@ -81,7 +81,7 @@ The top plate will contain two hatches for the installation of the TPCs; it will
 
 %\textbf{Design Parameters:}
 %
-The cryostat design for the CERN prototypes includes technical solutions that are of interested for the future needs of the DUNE program. For example the use of a cold ullage (\textless  100~K) to lower the impurities in the gas region, and of a LAr pump outside the cryostat to minimize the effect of noise, vibration and microphonics to the TPC inside the liquid argon volume.
+The cryostat design for the CERN prototypes includes technical solutions that are of interest for the future needs of the DUNE program. For example the use of a cold ullage (\textless  100~K) to lower the impurities in the gas region, and of a LAr pump outside the cryostat to minimize the effect of noise, vibration and microphonics to the TPC inside the liquid argon volume.
 %
 The design parameters for the DUNE-PT cryostat can be found in the Appendix.
 
