--- a/nuplatform.tex
+++ b/nuplatform.tex
@@ -59,6 +59,6 @@ The inner detector and surrounding cryostat of DUNE-PT will be located in a rece
 The experiment will rely on liquid nitrogen to provide cooling power for the argon condenser and the initial cool down of the vessel and the detector.  The area will have to be setup to receive regular tanker deliveries to a local dewar storage.  A distribution facility located in the experimental hall will be used to transfer the liquid nitrogen from the dewar system.  In addition, a liquid argon receiving facility which includes a storage dewar and an ambient vaporizer will be used to deliver liquid argon and gaseous argon to the cryostat.  Because of the risk of argon collecting in the pit, an exhaust pipe out of the pit will be required to vent the area.  The humidity and temperature in the experimental area will need to be controlled by air conditioning.   
 
 The experimental hall will need to supply dedicated electrical power for the various components. These include:
-the cryogenic system ($e.g.$ pumps), front-end electronics, high voltage systems, monitor systems, computers, $etc.$
+the cryogenic system ($e.g.$ pumps), front-end electronics, high voltage systems, monitor systems, computers, etc.
 
 
