Removed incorrect exposure reference

--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -48,10 +48,10 @@ energy scale uncertainties will impact DUNE
 %shows the effect of 
 %three values of neutrino energy scale uncertainty on the DUNE 
 mass hierarchy (left) and $\delta_{CP}$ (right) sensitivities.
-The exposure to achieve this level of sensitivity corresponds to 
+%The exposure to achieve this level of sensitivity corresponds to 
 %The nominal sensitivity assumes a
 % 230-400 kt-MW-years for mass hierarchy and  850-1320 kt-MW-years for CPV depending on the 
-115 kt-MW-years in each of neutrino and anti-neutrino modes.
+%115 kt-MW-years in each of neutrino and anti-neutrino modes.
 %The sensitivities will also depend on the
 %details of the LBNF neutrino beam design.
 %exposure with equal neutrino and antineutrino running. 
